fixed un-stretch to be a bit cleaner and more consistently calculated

--- a/src/title.css
+++ b/src/title.css
@@ -4,11 +4,7 @@
     initial-value: 2.5;
     inherits: true;
 }
-@property --y-unstretch {
-    syntax: '<number>';
-    initial-value: 4;
-    inherits: true;
-}
+
 @property --x-stretch {
     syntax: '<number>';
     initial-value: 2.5;
@@ -16,34 +12,40 @@
 }
 @property --x-unstretch {
     syntax: '<number>';
-    initial-value: 4;
+    initial-value: 2.5;
+    inherits: true;
+}
+
+@property --y-unstretch {
+    syntax: '<number>';
+    initial-value: 2.5;
     inherits: true;
 }
 
 body {
-    --start-anim: 3s;
+    --start-anim: 1.5s;
     --spin-time: 25s;
     --x-stretch: 2.5;
-    --x-unstretch: 0.4;
+    --x-unstretch: calc(1/var(--x-stretch));
     --y-stretch: 0.5;
-    --y-unstretch: 2;
+    --y-unstretch: calc(1/var(--y-stretch));
+
     --spin-direction: forwards;
-    animation: camera-sweep 3s linear 1;
+    animation: camera-sweep var(--start-anim) ease-in 1;
 }
 
 @keyframes camera-sweep{
     0% {
-        --y-stretch: .1;
-        --y-unstretch: .1;
-        --x-stretch: .1;
-        --x-unstretch: .1;
+        --y-stretch: 2;
+        --y-unstretch: .5;
+        --x-stretch: 2;
     }
     
     100%{
         --y-stretch: 0.5;
-        --y-unstretch: 2;
+
         --x-stretch: 2.5;
-        --x-unstretch: .4;
+
     }
 }
 
@@ -189,10 +191,10 @@ It should bounce a compress
 
 @keyframes anti-rotate {
     0% {
-        transform: translate(-50%, -50%) rotate(0deg) scale(var(--x-unstretch), var(--y-unstretch));
+        transform: translate(-50%, -50%) rotate(0deg) scale( var(--x-unstretch), var(--y-unstretch) );
     }
     100% {
-        transform: translate(-50%, -50%) rotate(-360deg) scale(var(--x-unstretch), var(--y-unstretch)); /* Full counter-rotation */
+        transform: translate(-50%, -50%) rotate(-360deg) scale( var(--x-unstretch), var(--y-unstretch) ); /* Full counter-rotation */
     }
 }
 
